Refinements to RL intro lessons

--- a/ray-rllib/00-Ray-RLlib-Overview.ipynb
+++ b/ray-rllib/00-Ray-RLlib-Overview.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "|    | Lesson | Description |\n",
     "| :- | :----- | :---------- |\n",
-    "| 00 | [Ray RLlib Overview](00-Ray-RLlib-Overview.ipynb) | Overview of this tutorial, including all the sections. |\n",
+    "| 00 | [Ray RLlib Overview](00-Ray-RLlib-Overview.ipynb) | Overview of this tutorial, including all the sections. (This file.) |\n",
     "| 01 | [Introduction to Reinforcement Learning](01-Introduction-to-Reinforcement-Learning.ipynb) | A quick introduction to the concepts of reinforcement learning. You can skim or skip this lesson if you already understand RL concepts. |\n",
     "| 02 | [Introduction to RLlib](02-Introduction-to-RLlib.ipynb) | An overview of RLlib, its goals and the capabilities it provides. |\n",
     "| 03 | [RL References](03-RL-References.ipynb) | References on reinforcement learning. |\n",
@@ -99,7 +99,7 @@
     "\n",
     "Start with the introduction material for RL and RLlib:\n",
     "\n",
-    "* [Ray RLlib Overview](00-Ray-RLlib-Overview.ipynb)\n",
+    "* [Ray RLlib Overview](00-Ray-RLlib-Overview.ipynb) - This file\n",
     "* [Introduction to Reinforcement Learning](01-Introduction-to-Reinforcement-Learning.ipynb) \n",
     "* [Introduction to RLlib](02-Introduction-to-RLlib.ipynb)\n",
     "\n",
