--- a/ray-rllib/02-Introduction-to-RLlib.ipynb
+++ b/ray-rllib/02-Introduction-to-RLlib.ipynb
@@ -93,12 +93,6 @@
     "    checkpoint_at_end=True,\n",
     "    verbose=2            # 2 for INFO; change to 1 or 0 to reduce the output.\n",
     "    )  \n",
-    "```\n",
-    "\n",
-    "You can view the training results, which are written to the directory `$HOME/ray_results` using TensorBoard:\n",
-    "\n",
-    "```shell\n",
-    "tensorboard --logdir=~/ray_results\n",
     "```"
    ]
   },
@@ -106,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try the CLI if you like now. The following `ray train` command will take between and two minutes on a \"recent vintage\" laptop:\n",
+    "Try the `rllib` CLI. The following `ray train` command will take between one and two minutes on a typical laptop (\"recent vintage\"):\n",
     "\n",
     "You could also run this command in a separate terminal window.\n",
     "\n",
@@ -128,19 +122,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To run TensorBoard, open a terminal (you can use the `+` item under the _Edit_ menu) and run this command:\n",
+    "You can also view the training results using [TensorBoard](https://www.tensorflow.org/tensorboard). The results during training were written to the directory `$HOME/ray_results`\n",
+    "\n",
+    "If you are viewing this lesson on the Anyscale hosted platform, use the provided link to open TensorBoard.\n",
+    "\n",
+    "If you are viewing this lesson on a laptop, open a terminal and run the following command, then open the URL shown in the output. (You can open a terminal using the `+` in the upper left-hand corner.)\n",
     "\n",
     "```shell\n",
-    "!tensorboard --logdir=~/ray_results\n",
+    "tensorboard --logdir=~/ray_results\n",
     "```\n",
     "\n",
-    "(This command can't be run in a notebook cell...)\n",
+    "Here is a [TensorBoard screenshot](../images/rllib/TensorBoard-CartPole-PPO.png).\n",
     "\n",
-    "TensorBoard lets you browse the training run data. Open the URL shown in the output.\n",
-    "\n",
-    "Here is a [screenshot](../images/rllib/TensorBoard-CartPole-PPO.png).\n",
-    "\n",
-    "Note that those results were written to the directory `~/ray_results`, by default, during training runs. In that directory you'll find results for all the RL training we'll do in this tutorial. You may wish to clean out old results periodically. For the run we just did, look for the results in `~/ray_results/default/PPO-CartPole-V0_0_*`. "
+    "The directory `~/ray_results` will contain the results for all the RL training we'll do in this tutorial. You may wish to clean out old results periodically. For the run we just did, look for the results in `~/ray_results/default/PPO-CartPole-V0_0_YYYY-MM-DD_HH-MM-SS*`. "
    ]
   },
   {
@@ -149,30 +143,14 @@
    "source": [
     "#### Rollout\n",
     "\n",
-    "> **WARNING:** The `rllib rollout` command shown below won't work in a cloud environment, because it attempts to pop up a window. If you are taking a live class, the instructor will demonstrate what you would see. You can also watch the next video of a single _episode_."
+    "> **WARNING:** The `rllib rollout` command discussed next won't work in a cloud environment, because it attempts to pop up a window. If you are taking a live class, the instructor will demonstrate what you would see. You can also watch the next video of a single _episode_."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<video src=\"../images/rllib/Cart-Pole-Example-Video.mp4\" controls  >\n",
-       "      Your browser does not support the <code>video</code> element.\n",
-       "    </video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Video object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import Video\n",
     "\n",
@@ -184,52 +162,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you are working on a laptop, you can use `rllib rollout <checkpoint> --run PPO` to reply a session using the trained model in `<checkpoint>`, which in this case will be a directory with a name like this:\n",
+    "If you are working on a laptop, you can use `rllib rollout <checkpoint> --run PPO` to run episodes from a `<checkpoint>`, which in this case will be a directory with a name like this:\n",
     "\n",
     "```\n",
     "$HOME/ray_results/default/PPO_CartPole-v0_0_YYYY-MM-DD_HH-MM-SS.../checkpoint_20/checkpoint-20/\n",
     "```\n",
     "\n",
-    "The following shell command should show you the directory for your run."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/deanwampler/ray_results/default\n",
-      "/Users/deanwampler/ray_results/default/experiment_state-2020-06-18_13-23-04.json\n",
-      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg\n",
-      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/result.json\n",
-      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/params.pkl\n",
-      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/params.json\n",
-      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/events.out.tfevents.1592511784.DWAnyscaleMBP.local\n",
-      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/progress.csv\n",
-      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/checkpoint_20\n",
-      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/checkpoint_20/checkpoint-20\n",
-      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/checkpoint_20/checkpoint-20.tune_metadata\n",
-      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/checkpoint_20/.is_checkpoint\n",
-      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/checkpoint_10\n",
-      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/checkpoint_10/checkpoint-10\n",
-      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/checkpoint_10/.is_checkpoint\n",
-      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/checkpoint_10/checkpoint-10.tune_metadata\n"
-     ]
-    }
-   ],
-   "source": [
-    "!find ~/ray_results/default"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now substitute `checkpoint_dir` in the following command with the full directory path shown that matches `PPO_CartPole_.../checkpoint_20/checkpoint-20`:"
+    "The following shell command will find the correct directory for you and run the `rllib rollout <checkpoint> --run PPO` command. The script prints the full command with the correct checkpoint directory. If it finds more than once checkpoint directory, for example from a previous run, it uses the latest one."
    ]
   },
   {
@@ -238,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!rllib rollout checkpoint_dir --run PPO "
+    "!rollout.sh --episodes 5"
    ]
   },
   {
