Refinements to the first two bandit lessons

--- a/ray-rllib/multi-armed-bandits/01-Introduction-to-Multi-Armed-Bandits.ipynb
+++ b/ray-rllib/multi-armed-bandits/01-Introduction-to-Multi-Armed-Bandits.ipynb
@@ -31,7 +31,10 @@
    "source": [
     "## Multi-Armed Bandits vs. General Reinforcement Learning\n",
     "\n",
-    "MABs are a simplified form of RL in two aspects. First, they do not attempt to learn the best actions to take for more than one state, which is either stationary or slowly evolving (we'll explore what the latter means later). Second, the action taken only affects the reward received, but not the next state of the environment."
+    "Bandits, in their simplest form, are have two restrictions compared to general reinforcement learning:\n",
+    "\n",
+    "1. They do not attempt to learn the best actions to take for more than one state, which is either stationary or slowly evolving. \n",
+    "2. The action taken only affects the reward received, but not the next state of the environment."
    ]
   },
   {
@@ -40,11 +43,11 @@
    "source": [
     "## Contextual Bandits\n",
     "\n",
-    "A **contextual bandit** ([Wikipedia](https://en.wikipedia.org/wiki/Multi-armed_bandit), [Ray documentation](https://docs.ray.io/en/latest/rllib-algorithms.html#contextual-bandits-contrib-bandits)) relaxes the first restriction by adding access to a state, the _context_ (what we called the _environment_ for RL) that influences the decisions that are made. At each time step, the algorithm observes this context, which can change significantly from one step to the next, and decides to choose one action among the available alternatives, then observes the outcome of that decision. The outcome defines a reward. The environment can change randomly between steps.\n",
+    "A **contextual bandit** ([Wikipedia](https://en.wikipedia.org/wiki/Multi-armed_bandit), [Ray documentation](https://docs.ray.io/en/latest/rllib-algorithms.html#contextual-bandits-contrib-bandits)) relaxes the first restriction by adding access to a state, the _context_ (what we called the current state of the _environment_ for RL) that influences the decisions that are made. At each time step, the algorithm observes this context, which can change significantly from one step to the next, and decides to choose one action among the available alternatives, then observes the outcome/reward of that decision. The environment can change randomly between steps.\n",
     "\n",
     "Returning to the inspiration of slot machines, a machine might change the images or colors it shows on the display to indicate a new context. This change could happen between each pull of the arm.\n",
     "\n",
-    "So, contextual bandits are a step closer to full RL, but the second difference remains, that the state is not influened by the action taken.\n",
+    "So, contextual bandits are a step closer to full RL, but the second difference remains, that the state is not influenced by the action taken.\n",
     "\n",
     "[Sutton 2018](../06-RL-References.ipynb#Books) uses the term _situation_ as a generic term for the environment's state and contextual bandits are called _associative search_ bandits, because they search for the best actions, but associated to a particular state (situation) value. Hence, non-contextual bandits are called _non-associative_. "
    ]
@@ -55,11 +58,11 @@
    "source": [
     "## Reward vs. Regret\n",
     "\n",
-    "While it's common in reinforcement learning to maximize **rewards**, we can also model the opposite of reward, called **regret**. Essentially, regret is the difference between the reward achieved from the total reward possible if the algorithm could choose the best possible decision at every time step.\n",
+    "While it's common in reinforcement learning to maximize **rewards**, we can also model the opposite of reward, called **regret**. Essentially, regret is the difference between the reward achieved from the best possible reward if the algorithm could choose the best decision at every step.\n",
     "\n",
-    "The point of using a bandit is to try to _maximize average reward_. If the algorithm had perfect visibility into the dynamics of the environment, it would always choose the optimal arm to maximize the cummulative reward! However, that's not an interesting real-world problem to solve. Instead, we focus on the case where the algorithm only has limited visibility, so it cannot predict rewards. This means that the **exploitation vs. exploration tradeoff** is an essential aspect of MABs that is shared with general reinforcement learning systems. Pulling one arm repeatedly may provide an excellent reward, but other arms my provide even better rewards, especially as the context evolves.\n",
+    "The point of using a bandit is to try to _maximize average reward_. If the algorithm had perfect visibility into the dynamics of the environment, it would always choose the optimal arm to maximize the cummulative reward! However, that's not an interesting real-world problem to solve. Instead, we focus on the case where the algorithm only has limited visibility, so it cannot predict rewards. This means that the **exploitation vs. exploration tradeoff** is an essential aspect of bandits that is shared with general reinforcement learning systems. Pulling one arm repeatedly may provide an excellent reward, but other arms my provide even better rewards, especially as the context evolves.\n",
     "\n",
-    "Even while the reward can't be predicted, some the exploration-explotatin strategy provided by some algorithms can place theoretical upper bounds on the regret. The use of machine learning to leverage the context and then minimize the regret in turn can provide good solutions. We'll explore this idea in the lessons."
+    "Even while the reward can't be predicted, some the exploration-explotation strategies can place theoretical upper bounds on the regret. The use of machine learning to leverage the context and then minimize the regret in turn can provide good solutions. We'll explore this idea in the lessons."
    ]
   },
   {
@@ -68,7 +71,7 @@
    "source": [
     "Translating these concepts to the investment fund example, market conditions define the context. Imagine having one arm of the contextual bandit for each of the stocks that could be selected as an investment. For example, when a particular arm gets “pulled” $10,000 gets invested into that stock for that week. Subsequent performance of the selected stocks defines the _reward_. The difference between this reward and the subsequent performance of the best-performing stock in the market defines the _regret_.\n",
     "\n",
-    "Of course, this example grossly oversimplified how investment fund management actually works, but it provides a good idea of how contextual bandits can be used for online learning problems. Bandit models are used in finance. They are also especially good for testing website designs, for example, often with greater flexibility and less cost than conventional A/B testing."
+    "Of course, this example grossly oversimplified how investment fund management actually works, but it provides a good idea of how contextual bandits can be used for online learning problems. Indeed, sophisticated bandit models are used in finance. "
    ]
   },
   {
@@ -81,10 +84,10 @@
     "\n",
     "* **State:** The state of the environment is its “context”.\n",
     "* **Action:** The decision taken, i.e., which arm is pulled.\n",
-    "* **Agent:** Same as before; the agent decides what action to take, based on policy within the environment.\n",
+    "* **Agent:** Same as before; the agent decides what action to take, based on a policy for the environment.\n",
     "* **Reward:** The observed reward received by taking the last action and the cummulative rewards for all actions.\n",
-    "* **Regret:** The difference between the total reward that could be achieved by always selecting the optimal arm and the total reward actually achieved by the algorithm.\n",
-    "* **Exploration/exploitation tradeoff:** Balancing when to exploit the best known arm available vs. trying different bandits to learn more about the possible rewards from other arms in the bandit."
+    "* **Regret:** The difference between the reward that could be achieved by always selecting the optimal arm and the reward actually achieved by the algorithm.\n",
+    "* **Exploration/exploitation tradeoff:** Balancing when to exploit the best rewarding arm known vs. trying different choices to learn more about the possibility of even better rewards."
    ]
   },
   {
@@ -93,7 +96,7 @@
    "source": [
     "## Applications\n",
     "\n",
-    "MABs have been [applied to a wide variety of applications](https://arxiv.org/abs/1904.10040). Some examples include the following:\n",
+    "Bandits have been applied to a wide variety of applications. Another practical use of bandits is testing alternative designs (like websites), often with greater flexibility and less cost than conventional A/B testing. Many example uses are described in this [paper](https://arxiv.org/abs/1904.10040):\n",
     "\n",
     "1. Determining the correct doses for individuals of widely-used medications, where the \"context\" is the individual's health data.\n",
     "2. Modeling brain and behaviorial disorders, accounting for sequential patterns.\n",
@@ -105,13 +108,6 @@
     "8. Anomaly detection, where the exploitation, exploration tradeoff informs how suspected anomalies are investigated, including which ones to pursue or ignore, based on relative likely significance.\n",
     "9. Frequency hopping, \"spreading\", and power control in telecommunications applications modeled and optimized to improve the end user experience."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
